<resources>
    <string name="app_name">InvGenius</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Novedades" fontFamily="@font/titillium_web_bold">Vista Previa</string>
    <string name="Producto" fontFamily="@font/titillium_web_bold">Producto</string>
    <string name="Categoria" fontFamily="@font/titillium_web_bold">Categoría</string>
    <string name="MiPerfil" fontFamily="@font/titillium_web_bold">Mi Perfil</string>
    <string name="CambiarContrasena" fontFamily="@font/titillium_web_bold">Cambiar Contraseña</string>
    <string name="CerrarSesion" fontFamily="@font/titillium_web_bold">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>